<resources>
    <string name="teambox_menu_detail">Détails</string>
    <string name="app_name">F1_Levier</string>
    <string name="title_tab_list">F1_Levier</string>
    <string name="title_tab_detail">tab Detail</string>
    <string name="ajout_tab">Ajouter</string>
    <string name="mod_tab">Consulter / Modifier / Supprimer</string>
    <string name="lastname">Nom :</string>
    <string name="firstname">Prénom :</string>
    <string name="age">Age :</string>
    <string name="alias">Surnom :</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="nb_participant">Nombre de participants :</string>
    <string name="list_participant">Liste des participants :</string>
    <string name="nb_team">Nombre d\'équipes :</string>
    <string name="list_team">Liste des équipes :</string>
    <string name="team_name">Nom de l\'équipe</string>
    <string name="new_course">Créer une nouvelle course</string>
    <string name="create_course">Création d\'une course</string>
    <string name="course_name">Nom de la course</string>
    <string name="course_date">Date de la course</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="history">Historique</string>
    <string name="available_participant">Participants disponibles :</string>
    <string name="team_members">Membres de l\'équipe :</string>
    <string name="add_new_participant">Ajouter un nouveau participant</string>
    <string name="save">Enregistrer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name=""></string>-->
</resources>
