<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".view.CreateCourseActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/create_course"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/courseName"
        app:layout_constraintStart_toStartOf="@+id/courseName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/courseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:editable="false"
        android:ems="10"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:hint="@string/course_date"
        android:inputType="none"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseName" />

    <Button
        android:id="@+id/createCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:text="@string/new_course"
        app:layout_constraintEnd_toEndOf="@+id/courseDate"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="@+id/courseDate"
        app:layout_constraintTop_toBottomOf="@+id/courseDate" />

</androidx.constraintlayout.widget.ConstraintLayout>