<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    tools:context="view.ParticipantTabConsultFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Participant sélectionné :"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="263dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/list_participant"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="241dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nb_participant"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="263dp" />


    <EditText
        android:id="@+id/editTextNbParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="285dp" />


    <EditText
        android:id="@+id/edt_selectedParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/editTextNbParticipant"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="285dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listParticipant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="#92D1D1D1"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/history"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="155dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/listParticipant"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="128dp" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/add"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="130dp" />

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/history"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        tools:layout_conversion_absoluteHeight="52dp"
        tools:layout_conversion_absoluteWidth="160dp" />


</androidx.constraintlayout.widget.ConstraintLayout>